--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="./body-style.css" />
+    </head>
+
     <body>
-        <p>Hello</p>
+        <p class="text-header">Hello</p>
+        <p class="text-description">about this project.</p>
     </body>
 </html>
