--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     </head>
 
     <body>
-        <p>git merge and git rebase</p>
-        <p>Hello</p>
-        <p class="text-header">Hello</p>
-        <p class="text-description">about this project.</p>
-
-        <img class="image" src="https://assets.entrepreneur.com/content/3x2/2000/20180703190744-rollsafe-meme.jpeg?crop=16:9" alt="image" />
+        <div class="card">
+            <p>git merge and git rebase</p>
+            <p class="text-header">Hello</p>
+            <p class="text-description">about this project.</p>
+    
+            <img class="image" style="margin-top: 10px;" src="https://assets.entrepreneur.com/content/3x2/2000/20180703190744-rollsafe-meme.jpeg?crop=16:9" alt="image" />
+        </div>
     </body>
 </html>
