fix: change text.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <p>git merge and git rebase</p>
-        <p>Hello</p>
+        <p>Hellos</p>
         <p class="text-header">Hello</p>
         <p class="text-description">about this project.</p>
 
